--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "multer": "^2.0.2",
     "nanoid": "^5.1.5",
     "nodemailer": "^7.0.6",
+    "pdfkit": "^0.17.2",
     "puppeteer": "^24.20.0"
   },
   "devDependencies": {
