--- a/package.json
+++ b/package.json
@@ -13,25 +13,30 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "chrome-launcher": "^1.2.0",
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "dotevn": "^0.0.1-security",
     "express": "^5.1.0",
+    "express-handlebars": "^8.0.3",
     "express-rate-limit": "^8.1.0",
     "handlebar": "^1.0.0",
     "handlebars": "^4.7.8",
     "hbs": "^4.2.0",
     "helmet": "^8.1.0",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "nanoid": "^5.1.5",
     "nodemailer": "^7.0.6",
+    "npm": "^11.6.0",
     "pdfkit": "^0.17.2",
-    "puppeteer": "^24.20.0"
+    "puppeteer": "^24.20.0",
+    "puppeteer-core": "^24.21.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
