--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "hbs": "^4.2.0",
     "helmet": "^8.1.0",
     "install": "^0.13.0",
+    "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
     "morgan": "^1.10.1",
